# Prajwal-GPT

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: Dockerfile  __init__.py
backend/app/: __init__.py  main.py  ollama_client.py  rag_system.py
deployment/: README.md  docker-compose.yml
frontend/: .env.example  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css
ingestion/: __init__.py  ingest.py
shared/: __init__.py  config.py  constants.json
